<resources>
    <string name="title_activity_maps">Map</string>

    <!-- Strings for tabs -->
    <string name="tab_home">HOME</string>
    <string name="tab_trips">TRIPS</string>

    <!-- Strings for Notifications StarTripService  -->
    <string name="notification_geofence_exited">Geofence Exited</string>
    <string name="notification_activity_driving">User is driving</string>

    <!-- Strings for Notifications StarTripService  -->
    <string name="notification_trip_started_no_gps_title">A trip has started</string>
    <string name="notification_trip_started_no_gps_message">Turn on the GPS please</string>

    <!-- Strings for TripTrackingService  -->
    <string name="trip_error_invalid">Trip is too short to be saved.</string>

    <!--Permissions-->
    <string name="permissions_why">We need your location in order to track your trip.</string>
    <string name="permissions_ok">OK</string>

    <!-- Activity detection strings -->
    <string name="in_vehicle">In a vehicle</string>
    <string name="on_bicycle">On a bicycle</string>
    <string name="on_foot">On foot</string>
    <string name="running">Running</string>
    <string name="still">Still</string>
    <string name="tilting">Tilting</string>
    <string name="unknown">Unknown activity</string>
    <string name="walking">Walking</string>
    <string name="unidentifiable_activity">Unidentifiable activity: %1$d</string>

    <!-- Trip Tab-->
    <string name="trip_tab_button_unclassified">UNCLASSIFIED</string>
    <string name="trip_tab_button_all">ALL</string>
    <string name="trip_tab_tv_work">WORK</string>
    <string name="trip_tab_tv_personal">OTHER</string>

    <string name="button_start_trip">START</string>
    <string name="button_stop_trip">STOP</string>
    <string name="default_card_miles">0.0 mi</string>
    <string name="default_card_deduction">0.00</string>
    <string name="card_dollar">$</string>
    <string name="card_deduction">deduction</string>

    <!-- Home Tab -->
    <string name="home_tab_tv_trips">Trips</string>
    <string name="home_tab_tv_auto_detection">Auto Detection</string>
    <string name="home_tab_tv_auto_classify">Auto Classify</string>
    <string name="str_personal">Personal</string>
    <string name="str_off">OFF</string>
    <string name="str_work">Work</string>
    <string name="str_charity">Charity</string>
    <string name="str_charity_slash">Charity/</string>
    <string name="str_medical">Medical</string>
    <string name="str_unclassified">Unclassified</string>
    <string name="title_activity_add_trip">Add Trip</string>
    <string name="title_activity_edit_trip">Edit Trip</string>

    <!-- Add Trip -->
    <string name="et_miles_hint">0.00</string>
    <string name="et_business_line_hint">Business Lines</string>
    <string name="et_error_add_trip">This field is required</string>
    <string name="et_invalid_date">Invalid Date</string>
    <string name="dialog_pick_photo">Photo</string>
    <string name="photo_failed_to_load">Failed To Load</string>
    <string name="image_gallery_title">Title</string>
    <string name="et_note">Note</string>
    <string name="et_from_hint">From</string>
    <string name="et_to_hint">To</string>
    <string name="et_add_note_hint">Add note</string>
    <string name="title_edit_trip">Edit Trip</string>
    <string name="str_mileage">Mileage (mi)</string>
    <!-- Strings related to Edit Profile -->
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_mobile">Mobile</string>
    <string name="prompt_invite_code">Invite Code</string>
    <string name="prompt_mileage_rate">Mileage Rate</string>
    <string name="prompt_change_password">Change Password</string>
    <string name="prompt_sign_out">Sign Out</string>
    <!-- Strings related to settings -->
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="generate_data_export">Generate Data Export</string>
    <string name="sharing">Sharing</string>
    <string name="help">Help</string>
    <string name="refer_friends">Refer Friends</string>
    <string name="rate_everlance">Rate Everlance</string>
    <string name="feedback_everlance">Feedback to support@everlance.com</string>
    <string name="tutorial">Tutorial</string>
    <string name="help_center">Help Center</string>
    <string name="support_email">support@everlance.com</string>
    <string name="support_email_subject">Everlance Feedback</string>
    <string name="help_center_url">http://help.everlance.com/?utm_source=settings-tab-android</string>
    <string name="rate_everlance_url">http://play.google.com/store/apps?hl=en</string>

    <!-- Strings related to change passoword -->
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="password_invalid">Invalid Password</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_sign_up">Sign up</string>
    <string name="welcome_text">Welcome back!</string>
    <string name="forgot_password">Forgot your password?</string>
    <!-- Strings related to reset password -->
    <string name="title_no_problem">No problem!</string>
    <string name="title_email">What\'s your email?</string>
    <string name="password_confirmation_message">We sent password reset instructions</string>
    <string name="button_reset_password">EMAIL ME A RESET LINK</string>
    <string name="return_to_login">Nevermind! I\'d like to login</string>
    <string name="signing_in">Signing In…</string>
    <string name="signing_up">Signing Up…</string>

    <!--String cardview all trip-->
    <string name="miles">mi</string>
    <string name="deduction">deduction</string>
    <string name="str_miles">miles</string>
    <!-- Strings related to signup -->
    <string name="signup_test">The best way to track mileage, expenses, and revenue.</string>
    <string name="invite_code_hint">invite code (optional)</string>
    <string name="agree_terms_of_use">By signing up, you agree to our</string>
    <string name="terms_of_use">Terms of Service</string>

    <!-- Trip All Trip -->
    <string name="trip_uncategorized">Uncategorized</string>

    <string name="hour_place">%1$s %2$s</string>
    <string name="money">$%1$s</string>
    <string name="distance_kilo">%1$dK</string>
    <string name="minutes">minutes</string>

    <!-- Strings related to work sources -->
    <string name="title_activity_work_sources">WorkSourcesActivity</string>
    <string name="action_next">NEXT</string>
    <string name="prompt_name">Name</string>
    <string name="action_add_short">Add</string>
    <string name="ws_added">Added</string>
    <string name="ws_error_name">Not admissible name</string>
    <string name="ws_ok_send">Info send Successfully</string>
    <string name="ws_error_send">Error</string>
    <string name="ws_title">What do you do for work?</string>

    <!--Strings related to dialog -->
    <string name="dialog_no_connection_message">Can\'t connect to the server. Please check your connnection.</string>
    <string name="dialog_no_connection_title">No internet connection</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_retry">RETRY</string>
    <string name="dialog_add">ADD</string>

    <!-- Strings related to dialog picture -->
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="last_photo">Use last photo taken</string>
    <!--Menu-->
    <string name="menu_save">Save</string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_favorite">Favorite</string>


    <!-- String-arrays related to work sources -->
    <string name="worksource_save">Save</string>

    <!-- CardView message -->
    <string-array name="cv_message_titles">
        <item>Auto Classify WORK is ON</item>
        <item>Auto Classify PERSONAL is ON</item>
        <item>Automatic Trip Detection is OFF</item>
        <item>Automatic Trip Detection is ON</item>
        <item>You don’t have any trips yet!</item>
    </string-array>
    <string-array name="cv_message_descriptions">
        <item>See your new trips in the ALL tab</item>
        <item>See your new trips in the ALL tab</item>
        <item>You can activate Auto Detection from Home</item>
        <item>Come back after driving to see your trips!</item>
        <item>Add one by clicking + button</item>
    </string-array>
    <string name="title_activity_edit_profile">Profile</string>

    <!-- Strings for sliding view pager-->
    <string-array name="titles_strings">
        <item>Welcome to Everlance</item>
        <item>Automatic Mileage Tracking</item>
        <item>Save Money on Taxes</item>
        <item>Backed up in the Cloud</item>
    </string-array>
    <string-array name="messages_strings">
        <item>Effortless expense tracking &amp; automatic mileage log.</item>
        <item>Every 1,000 miles is worth $575 of tax deductions.</item>
        <item>Maximize deductions and save more money on taxes.</item>
        <item>Export your data whenever you need to!</item>
    </string-array>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_settings_activity">Settings</string>
    <string name="title_change_password_activity">Change Password</string>

    <!-- Strings related to my work sources -->
    <string name="mws_none">None</string>
</resources>
