<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.example.ruby.getgps.ui.activities.ForgotPasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        app:theme="@style/ToolbarColoredBackArrow" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sign_in_large_padding"
        android:layout_marginTop="@dimen/xxxlarge_margin"
        android:text="@string/title_no_problem"
        android:textColor="@color/colorPrimaryEv"
        android:textSize="@dimen/cv_big_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_margin"
        android:layout_marginStart="@dimen/sign_in_large_padding"
        android:text="@string/title_email"
        android:textColor="@color/colorPrimaryEv"
        android:textSize="@dimen/cv_big_text_size" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large_margin"
        android:layout_marginTop="@dimen/xxxlarge_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/sign_in_large_padding">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/black" />
    </android.support.design.widget.TextInputLayout>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/xxxlarge_margin"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_confirmation_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xxxlarge_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/sign_in_large_padding"
        android:text="@string/password_confirmation_message"
        android:textSize="@dimen/edit_profile_text_size"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_sent_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/sign_in_large_padding"
        android:textSize="@dimen/edit_profile_text_size"
        android:visibility="gone" />


    <Button
        android:id="@+id/bt_forgot_password"
        style="?android:attr/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_reset_password" />

    <ImageView
        android:id="@+id/iv_confirmation"
        android:layout_width="@dimen/circle_green_icon"
        android:layout_height="@dimen/circle_green_icon"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/button_margin_top_sign_in"
        android:background="@drawable/green_circle"
        android:src="@drawable/ic_check_white"
        android:visibility="gone" />

    <Button
        android:id="@+id/tv_nevermind_login"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/xmedium_margin"
        android:text="@string/return_to_login"
        android:textColor="@color/colorPrimaryEv" />

</LinearLayout>
