<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_live_card_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:textStyle="bold"
        android:visibility="gone"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/cardview_height"
        android:layout_marginLeft="@dimen/line_separator"
        android:layout_marginRight="@dimen/line_separator"
        android:layout_marginTop="@dimen/xxxsmall_margin"
        android:layout_marginBottom="@dimen/xxsmall_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.75"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_trip_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:textColor="@color/colorPrimaryEv"
                    android:textSize="@dimen/cv_new_trip_text_size"
                    android:text="@string/default_card_miles"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:orientation="vertical"
                    android:gravity="end">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_dollar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/medium_text_size"
                            android:text="@string/card_dollar" />
                        <TextView
                            android:id="@+id/tv_trip_deduction"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/medium_text_size"
                            android:text="@string/default_card_deduction" />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/tv_deduction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/medium_text_size"
                        android:text="@string/card_deduction"
                        android:layout_marginTop="@dimen/neg_xxxsmall_margin"
                        android:gravity="end"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="3">

                <fragment
                    android:id="@+id/location_map"
                    class="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/trip_tab_map_height" />
            </LinearLayout>

            <Button
                android:id="@+id/bt_start_trip"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.25"
                android:background="@drawable/button_start_trip"
                android:text="@string/button_start_trip"
                android:textSize="@dimen/cv_big_text_size"
                android:visibility="visible" />

            <Button
                android:id="@+id/bt_stop_trip"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.25"
                android:background="@drawable/button_stop_trip"
                android:text="@string/button_stop_trip"
                android:textSize="@dimen/cv_big_text_size"
                android:visibility="gone" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>

